--- a/contact.html
+++ b/contact.html
@@ -25,8 +25,21 @@
 
 </head>
 
-<body style="background:linear-gradient(to right, #4b8dca, #7F7A8D);">
+<body style="    background:linear-gradient(to right, #f8280d, #f32f0c);">
     
+
+    <div class="top-section mt-5 pt-5 " >
+        <nav aria-label="breadcrumb">
+          <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="index.html" style="text-decoration: none;">Home</a></li>
+            <li class="breadcrumb-item" ><a href="best-stays.html" style="text-decoration: none;">Stays</a></li>
+            <li class="breadcrumb-item  active" aria-current="page" ><a href="index.html" style="text-decoration: none;">About-us </a></li>
+            <li class="breadcrumb-item  active" aria-current="page" >Contact-us</li>
+            <li class="breadcrumb-item  active" aria-current="page" >earch-Results</li>
+          </ol>
+        </nav>
+        <h2><b>Booking</b></h2>
+      </div>
     <!-- ***** Search Form Area ***** -->
     <div class="dorne-search-form d-flex align-items-center">
         <div class="container">
