--- a/best-stays.html
+++ b/best-stays.html
@@ -22,14 +22,9 @@
     <!-- Responsive CSS -->
     <link href="css/responsive/responsive.css" rel="stylesheet">
     <!-- <link rel="stylesheet" href="style1.css"> -->
-
-
 </head>
-
 <body>
-
-
-    
+  
     <!-- ***** Search Form Area ***** -->
     <div class="dorne-search-form d-flex align-items-center">
         <div class="container">
@@ -65,16 +60,13 @@
                         <div class="collapse navbar-collapse" id="dorneNav">
                             <ul class="navbar-nav mr-auto" id="dorneMenu">
                                 <li class="nav-item active">
-                                    <a class="nav-link" href="index.html">Home <span
-                                            class="sr-only">(current)</span></a>
+                                    <a class="nav-link" href="index.html">Home </a>
                                 </li>
                                 <li class="nav-item active">
-                                  <a class="nav-link" href="best-stays.html">Stays <span
-                                          class="sr-only">(current)</span></a>
+                                  <a class="nav-link" href="best-stays.html">Stays </a>
                               </li>
                                 <li class="nav-item active">
-                                    <a class="nav-link" href="index.html">About us <span
-                                            class="sr-only">(current)</span></a>
+                                    <a class="nav-link" href="index.html">About us </a>
                                 </li>
                                 <div class="dropdown">
                                     <button class="btn  btn-secondary dropdown-toggle" type="button"
@@ -92,8 +84,7 @@
                                 </div>
 
                                 <li class="nav-item active">
-                                    <a class="nav-link" href="contact.html">Contact us<span
-                                            class="sr-only">(current)</span></a>
+                                    <a class="nav-link" href="contact.html">Contact us</a>
                                 </li>
                             </ul>
                             <!-- Add listings btn -->
@@ -107,6 +98,18 @@
         </div>
     </header>
 
+    <div class="top-section mt-5 pt-5 " >
+      <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item"><a href="index.html" style="text-decoration: none;">Home</a></li>
+          <li class="breadcrumb-item" ><a href="index.html" style="text-decoration: none;">India</a></li>
+          <li class="breadcrumb-item  active" aria-current="page" ><a href="index.html" style="text-decoration: none;">Tamilnadu </a></li>
+          <li class="breadcrumb-item  active" aria-current="page" >Tiruvannamalai</li>
+          <li class="breadcrumb-item  active" aria-current="page" >Search-Results</li>
+        </ol>
+      </nav>
+      <h2 class="mx-5"><b>Booking</b></h2>
+    </div>
     <div class="container-fluid booking mt-5" style="padding-top: 20px;"  >
       <div class="container pt-5" >
           <div class="bg-secondary shadow" style="padding: 30px;">
@@ -116,7 +119,7 @@
                           <div class="col-md-3">
                               <div class="mb-3 mb-md-0">
                                   <input type="text" id="destination" name="destination" class="form-control px-4"
-                                      placeholder="Where are you going?" required>
+                                      placeholder="Where are you going?" required >
                               </div>
                           </div>
                           <div class="col-md-3">
@@ -156,18 +159,15 @@
                     <!-- Your form elements -->
                     <!-- Submit button -->
                     <div class="col-md-2">
-                        <button class="btn btn-danger " type="submit"
-                            style="height: 47px; margin-top: -2px;">Submit</button>
+                        <button class="btn btn-danger  " type="submit"
+                            style="height: 47px; margin-top: 4px; ">Submit</button>
                     </div>
                 </form>
               </div>
-
           </div>
       </div>
   </div>
-
   <main>
-   
     <div class="album py-5 bg-body-tertiary ">
       <div class="container mt-5">
 
@@ -445,9 +445,8 @@
 
 <style>
   header{
-    background:linear-gradient(to right, #4b8dca, #7F7A8D);
-  }
+    background:linear-gradient(to right, #ee3921, #e24a0e);  }
   footer{
-    background:linear-gradient(to right, #4b8dca, #7F7A8D);
+    background:linear-gradient(to right, #ee3921, #e24a0e);
   }
 </style>
