--- a/admin_secondary/index.html
+++ b/admin_secondary/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
 	<title>Hotel Dashboard Template</title>
-	<link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.png">
+	<!-- <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.png"> -->
 	<link rel="stylesheet" href="assets/css/bootstrap.min.css">
 	<link rel="stylesheet" href="assets/plugins/fontawesome/css/fontawesome.min.css">
 	<link rel="stylesheet" href="assets/plugins/fontawesome/css/all.min.css">
@@ -19,21 +19,21 @@
 		<div class="header">
 		  <div class="header-left">
 			<a href="index.html" class="logo">
-			  <img
+			  <!-- <img
 				src="assets/img/hotel_logo.png"
 				width="50"
 				height="70"
 				alt="logo"
-			  />
+			  /> -->
 			  <span class="logoclass">HOTEL</span>
 			</a>
 			<a href="index.html" class="logo logo-small">
-			  <img
+			  <!-- <img
 				src="assets/img/hotel_logo.png"
 				alt="Logo"
 				width="30"
 				height="30"
-			  />
+			  /> -->
 			</a>
 		  </div>
   
@@ -48,13 +48,13 @@
 		  <ul class="nav user-menu">
 			<li class="nav-item dropdown has-arrow">
 			  <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown">
-				<span class="user-img"
-				  ><img
+				<span class="user-img">
+					<!-- <img
 					class="rounded-circle"
 					src="assets/img/profiles/avatar-01.jpg"
 					width="31"
-					alt="Soeng Souy"
-				/></span>
+					alt="Soeng Souy"/> -->
+			</span>
 			  </a>
 			  <div class="dropdown-menu">
 				<div class="user-header">
@@ -82,16 +82,12 @@
 					<ul>
 						<li class="active"> <a href="index.html"><i class="fas fa-tachometer-alt"></i> <span>Dashboard</span></a> </li>
 						<li class="list-divider"></li>
-						<li> <a href="Booking.html"><i class="fas fa-suitcase"></i> <span>Booking</span> </a></li>
+						<li> <a href="Booking.html"><i class="fas fa-suitcase"></i> <span>Booked</span> </a></li>
 						<li> <a href="checkin.html"><i class="fa-solid fa-inbox"></i> <span> Check in  </span> </a></li>
-						<li class="submenu"> <a href="#"><i class="fa-solid fa-inbox"></i> <span> Check out </span></a></li>
-						<li class="submenu"> <a href="#"><i class="fas fa-table"></i> <span> Tables </span> </a>
-							<ul class="submenu_class" style="display: none;">
-								<li><a href="tables-datatables.html">Data Table </a></li>
-							</ul>
-						</li>
-						<li class="submenu"> <a href="#"><i class="fas fa-key"></i> <span> Rooms </span> <span class="menu-arrow"></span></a></li>
-						<li class="submenu"> <a href="#"><i class="fas fa-user"></i> <span> Users </span> <span class="menu-arrow"></span></a></li>
+						<li> <a href="checkout.html"><i class="fa-solid fa-inbox"></i> <span> Check out </span></a></li>
+						<li> <a href="Room category list.html"><i class="fas fa-table"></i> <span> Room Category List </span> </a></li>
+						<li> <a href="rooms.html"><i class="fas fa-key"></i> <span> Rooms </span> </a></li>
+						<li> <a href="users.html"><i class="fas fa-user"></i> <span> Users </span> </a></li>
 						<li> <a href="settings.html"><i class="fas fa-cog"></i> <span>Settings</span></a> </li>
 						<li class="list-divider"></li>
 					</ul>
@@ -103,8 +99,8 @@
 			<div class="col-2"></div>
 			<div class="card align-items-center ">
 				<div class="card-body">
-					<a href="#"><button class="btn btn-primary p-4 mx-5 mt-5">BOOKING </button></a> 
-					<a href="#"><button class="btn btn-primary p-4 mx-5 mt-5">ROOMS </button></a> 
+					<a href="Booking.html"><button class="btn btn-primary p-4 mx-5 mt-5">BOOKING </button></a> 
+					<a href="rooms.html"><button class="btn btn-primary p-4 mx-5 mt-5">ROOMS </button></a> 
 				</div>
 			</div>
 			<div class="col-2"></div>
