--- a/contact.html
+++ b/contact.html
@@ -21,11 +21,15 @@
 
     <!-- Responsive CSS -->
     <link href="css/responsive/responsive.css" rel="stylesheet">
-
-
+ <style>
+    header{
+    background:linear-gradient(to right, #ee3921, #e24a0e);  }
+    footer{
+    background:linear-gradient(to right, #ee3921, #e24a0e);  }
+ </style>
 </head>
 
-<body style="    background:linear-gradient(to right, #f8280d, #f32f0c);">
+<body>
     
 
     <div class="top-section mt-5 pt-5 " >
@@ -38,7 +42,7 @@
             <li class="breadcrumb-item  active" aria-current="page" >earch-Results</li>
           </ol>
         </nav>
-        <h2><b>Booking</b></h2>
+        <h2><b>Y-spot Booking</b></h2>
       </div>
     <!-- ***** Search Form Area ***** -->
     <div class="dorne-search-form d-flex align-items-center">
@@ -66,8 +70,11 @@
                     <nav class="h-100 navbar navbar-expand-lg">
                         <!-- <a class="navbar-brand" href="index.html"><img src="img/core-img/logo.png" alt=""></a> -->
                         <a class="navbar-brand" href="index.html">
-                            <h4>Y SPOT</h4>
+                            <h4><img style="height: 50px; width: 140px;" src="img/red backside.PNG" alt=""></h4>
                         </a>
+                        <!-- <a class="navbar-brand" href="index.html">
+                            <h4>Y SPOT</h4>
+                        </a> -->
                         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#dorneNav"
                             aria-controls="dorneNav" aria-expanded="false" aria-label="Toggle navigation"><span
                                 class="fa fa-bars"></span></button>
@@ -102,8 +109,7 @@
                                 </div>
 
                                 <li class="nav-item active">
-                                    <a class="nav-link" href="contact.html">Contact us<span
-                                            class="sr-only">(current)</span></a>
+                                    <a class="nav-link" href="contact.html">Contact us</a>
                                 </li>
                             </ul>
                             <!-- Add listings btn -->
@@ -123,15 +129,15 @@
         <!-- Contact Form Area -->
         <div class="contact-form-area equal-height">
             <div class="contact-text">
-                <h4 style="color: white;">Hello, Get in touch with us</h4>
-                <p style="color: white;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam ac nibh sed mi ullamcorper rhoncus.
+                <h4 style="color: rgb(22, 22, 22);">Hello, Get in touch with us</h4>
+                <p style="color: rgb(29, 28, 28);">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam ac nibh sed mi ullamcorper rhoncus.
                     Curabitur pulvinar vel augue sit amet vestibulum. Proin tempus lacus porta lorem blandit aliquam
                     eget quis ipsum. Vivamus accumsan consequat ligula non volutpat. Sed mollis orci non cursus
                     vestibulum. Pellentesque vitae est a augue laoreet venenatis sed eu felis. Sed cursus magna nec
                     turpis ullamcorper, eget rutrum felis egestas. Nunc odio ex, fermentum efficitur nunc vitae,
                     efficitur hendrerit diam. Lorem ipsum dolor sit amet, consectetur.</p>
-                <div class="contact-info d-lg-flex">
-                    <div class="single-contact-info" >
+                <div class="contact-info d-lg-flex bg-danger">
+                    <div class="single-contact-info " >
                         <h6 style="color: white;"><i class="fa fa-map-signs" aria-hidden="true" style="color: white;"></i> Main Avenue Soho, NY</h6>
                         <h6 style="color: white;"><i class="fa fa-map-signs" aria-hidden="true" style="color: transparent;"></i> No. 25-33</h6>
                     </div>
