--- a/best-stays.html
+++ b/best-stays.html
@@ -51,8 +51,11 @@
                     <nav class="h-100 navbar navbar-expand-lg">
                         <!-- <a class="navbar-brand" href="index.html"><img src="img/core-img/logo.png" alt=""></a> -->
                         <a class="navbar-brand" href="index.html">
+                          <h4><img style="height: 50px; width: 140px;" src="img/red backside.PNG" alt=""></h4>
+                      </a>
+                        <!-- <a class="navbar-brand" href="index.html">
                             <h4>Y SPOT</h4>
-                        </a>
+                        </a> -->
                         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#dorneNav"
                             aria-controls="dorneNav" aria-expanded="false" aria-label="Toggle navigation"><span
                                 class="fa fa-bars"></span></button>
