--- a/best-stays.html
+++ b/best-stays.html
@@ -92,7 +92,7 @@
                             </ul>
                             <!-- Add listings btn -->
                             <div class="dorne-add-listings-btn">
-                                <a href="#" class="btn dorne-btn">Login / Register</a>
+                                <a href="admin_secondary/index.html" class="btn dorne-btn">Login / Register</a>
                             </div>
                         </div>
                     </nav>
@@ -111,8 +111,7 @@
           <li class="breadcrumb-item  active" aria-current="page" >Search-Results</li>
         </ol>
       </nav>
-      <h2 class="mx-5"><b>Booking</b></h2>
-    </div>
+      <h2 class="mx-5"><b>Y-spot Booking</b></h2>    </div>
     <div class="container-fluid booking mt-5" style="padding-top: 20px;"  >
       <div class="container pt-5" >
           <div class="bg-secondary shadow" style="padding: 30px;">
