--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
     header{
     background:linear-gradient(to right, #ee3921, #e24a0e);  }
     footer{
-    background:linear-gradient(to right, #ee3921, #e24a0e);  }
+    background:linear-gradient(to right, #ee3921, #fa2e09);  }
  </style>
 </head>
 
@@ -39,10 +39,10 @@
             <li class="breadcrumb-item" ><a href="best-stays.html" style="text-decoration: none;">Stays</a></li>
             <li class="breadcrumb-item  active" aria-current="page" ><a href="index.html" style="text-decoration: none;">About-us </a></li>
             <li class="breadcrumb-item  active" aria-current="page" >Contact-us</li>
-            <li class="breadcrumb-item  active" aria-current="page" >earch-Results</li>
+            <li class="breadcrumb-item  active" aria-current="page" >Search-Results</li>
           </ol>
         </nav>
-        <h2><b>Y-spot Booking</b></h2>
+        <h2 class="mx-5"><b>Y-spot Booking</b></h2>
       </div>
     <!-- ***** Search Form Area ***** -->
     <div class="dorne-search-form d-flex align-items-center">
@@ -114,7 +114,7 @@
                             </ul>
                             <!-- Add listings btn -->
                             <div class="dorne-add-listings-btn">
-                                <a href="#" class="btn dorne-btn">Login / Register</a>
+                                <a href="admin_secondary/index.html" class="btn dorne-btn">Login / Register</a>
                             </div>
                         </div>
                     </nav>
@@ -136,22 +136,22 @@
                     vestibulum. Pellentesque vitae est a augue laoreet venenatis sed eu felis. Sed cursus magna nec
                     turpis ullamcorper, eget rutrum felis egestas. Nunc odio ex, fermentum efficitur nunc vitae,
                     efficitur hendrerit diam. Lorem ipsum dolor sit amet, consectetur.</p>
-                <div class="contact-info d-lg-flex bg-danger">
+                <div class="contact-info d-lg-flex " style="background-color: #fff;">
                     <div class="single-contact-info " >
-                        <h6 style="color: white;"><i class="fa fa-map-signs" aria-hidden="true" style="color: white;"></i> Main Avenue Soho, NY</h6>
-                        <h6 style="color: white;"><i class="fa fa-map-signs" aria-hidden="true" style="color: transparent;"></i> No. 25-33</h6>
+                        <h6 style="color: rgb(17, 16, 16);"><i class="fa fa-map-signs" aria-hidden="true" style="color: rgb(17, 16, 16);"></i> Main Avenue Soho, NY</h6>
+                        <h6 style="color: rgb(17, 16, 16);"><i class="fa fa-map-signs" aria-hidden="true" style="color: transparent;"></i> No. 25-33</h6>
                     </div>
                     <div class="single-contact-info">
-                        <h6 style="color: white;"><i class="fa fa-envelope-o" aria-hidden="true" style="color: white;"></i> contact@yourbusiness.com</h6>
-                        <h6 style="color: white;"><i class="fa fa-phone" aria-hidden="true" style="color: white;"></i> +34 567 22478 49567</h6>
+                        <h6 style="color: rgb(17, 16, 16);"><i class="fa fa-envelope-o" aria-hidden="true" style="color: rgb(17, 16, 16);"></i> contact@yourbusiness.com</h6>
+                        <h6 style="color: rgb(17, 16, 16);"><i class="fa fa-phone" aria-hidden="true" style="color: rgb(17, 16, 16);"></i> +34 567 22478 49567</h6>
                     </div>
                 </div>
             </div>
         </div>
         <!-- Map Area -->
-        <div class="contact-form">
+        <div class="contact-form bg-dark">
             <div class="contact-form-title">
-                <h6 style="color: white;">Contact Business</h6>
+                <h6 style="color: #fff;">Contact Business</h6>
             </div>
             <form action="#">
                 <div class="row">
@@ -169,7 +169,7 @@
                             placeholder="Your Message"></textarea>
                     </div>
                     <div class="col-12 text-center">
-                        <button type="submit" class="btn dorne-btn ">Send</button>
+                        <button type="submit">Send</button>
                     </div>
                 </div>
             </form>
@@ -183,7 +183,7 @@
           <div class="row">
             <div class="col-12 d-md-flex align-items-center justify-content-between">
               <div class="footer-text">
-                <p style="color: white;">
+                <p style="color: rgb(17, 16, 16);">
                   <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                   Copyright &copy;
                   <script>document.write(new Date().getFullYear());</script> All rights reserved | Made with <i
