--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                                 </li>
                                
                                 <div class="dropdown">
-                                    <button class="btn  btn-secondary dropdown-toggle" type="button"
+                                    <button class="btn  btn-secondary dropdown-toggle  " type="button"
                                         id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true"
                                         aria-expanded="false">
                                         Reservation <i class="fa-solid fa-caret-down"></i>
@@ -92,8 +92,8 @@
                                         <a class="dropdown-item" href="#">Destinations</a>
                                     </div>
                                 </div>
-
-                                <li class="nav-item active">
+                                <br>
+                                <li class="nav-item active ">
                                     <a class="nav-link" href="contact.html">Contact us</a>
                                 </li>
                             </ul>
@@ -123,8 +123,8 @@
         </div>
       </h1>
   </div>
-  <div class="container mx-5 ">
-    <h2>A Best Place  To Enjoy Your Life</h2>
+  <div class="container ms-4 ">
+    <h2 class="ms-2">A Best Place  To Enjoy Your Life</h2>
   </div>
     <!-- ***** Welcome Area Start ***** -->
     <!-- <section class="dorne-welcome-area bg-img bg-overlay"
