--- a/best-stays.html
+++ b/best-stays.html
@@ -78,7 +78,7 @@
                                         Reservation <i class="fa-solid fa-caret-down"></i>
                                     </button>
                                     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                                        <a class="dropdown-item" href="#">Hotels</a>
+                                        <a class="dropdown-item" href="./pages/Hotels/hotels.html">Hotels</a>
                                         <a class="dropdown-item" href="#"> Restaurant</a>
                                         <a class="dropdown-item" href="#">Tour & Travels</a>
                                         <a class="dropdown-item" href="#">Events</a>
