--- a/booknow/Booknow.html
+++ b/booknow/Booknow.html
@@ -111,7 +111,7 @@
                                 </script>
                                 
                                 <li class="nav-item active">
-                                    <a class="nav-link" href="contact.html">Contact us</a>
+                                    <a class="nav-link" href="../contact.html">Contact us</a>
                                 </li>
                             </ul>
                             <!-- Add listings btn -->
