--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
                                         Reservation <i class="fa-solid fa-caret-down"></i>
                                     </button>
                                     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                                        <a class="dropdown-item" href="#">Hotels</a>
-                                        <a class="dropdown-item" href="#"> Restaurant</a>
+                                        <a class="dropdown-item" href="./pages/Hotels/hotels.html">Hotels</a>
+                                        <a class="dropdown-item" href="./pages/Restaurant/restaurant.html"> Restaurant</a>
                                         <a class="dropdown-item" href="#">Tour & Travels</a>
                                         <a class="dropdown-item" href="#">Events</a>
                                         <a class="dropdown-item" href="#">Destinations</a>
@@ -114,7 +114,7 @@
     <h1 style="color: rgb(250, 33, 26)">
         It's
         <div class="wavy">
-          <span style="--i: 1">Y</span>
+          <span style="--i: 1" class="Y">Your</span>
           <span style="--i: 2">S</span>
           <span style="--i: 3">P</span>
           <span style="--i: 4">O</span>
