--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="en" data-bs-theme="auto">
-  <head><script src="../assets/js/color-modes.js"></script>
+  <head><script src="./assets/js/color-modes.js"></script>
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -15,7 +15,7 @@
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@docsearch/css@3">
 
-    <link href="../assets/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="./assets/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">  
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
@@ -138,7 +138,7 @@
           <h3 class="text-light">Your recent searches</h3>
         <div class="d-flex p-3 bg-light col-md-4">
           <div class="flex-shrink-0">
-            <img src="../assets/img/633390.jpg" alt="...">
+            <img src="./assets/img/633390.jpg" alt="...">
           </div>
           <div class="flex-grow-1 ms-3">
             <h5 class="card-title">Tiruvannamalai</h5>
@@ -163,7 +163,7 @@
                 </div>
               </div>
               <div class="col-md-4">
-                <img src="../assets/img/brussels.png" class="img-fluid rounded-start" alt="...">
+                <img src="./assets/img/brussels.png" class="img-fluid rounded-start" alt="...">
               </div>
             </div>
           </div>
@@ -180,7 +180,7 @@
                 </div>
               </div>
               <div class="col-md-4">
-                <img src="../assets/img/flight.png" class="img-fluid rounded-start" alt="...">
+                <img src="./assets/img/flight.png" class="img-fluid rounded-start" alt="...">
               </div>
             </div>
           </div>
@@ -263,7 +263,7 @@
     </footer>
   </div>
 </main>
-<script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
+<script src="./assets/dist/js/bootstrap.bundle.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/masonry-layout@4.2.2/dist/masonry.pkgd.min.js" integrity="sha384-GNFwBvfVxBkLMJpYMOABq3c+d3KnQxudP/mGPkzpZSTYykLBNsZEnG2D9G/X/+7D" crossorigin="anonymous" async></script>
 
 </body>
