--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <a class="nav-link" href="#"><button type="button" class="btn btn-light text-danger">Register</button></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#"><button type="button" class="btn btn-light text-danger">Sign In</button></a>
+                <a class="nav-link" href="login/login.html"><button type="button" class="btn btn-light text-danger">Sign In</button></a>
               </li>
             </ul>
           </div>
