--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
       </nav>
     </header>
 
-    <div class="p-5 mb-4 bg-body-tertiary rounded-3 " style="background-image: url(./assets/img/333650742.jpeg); background-repeat: no-repeat; ">
+    <div class="p-5 mb-4 bg-body-tertiary rounded-3 " style="background-image: url(./assets/img/hero.jpeg); background-repeat: no-repeat; ">
       <div class="container py-5">
         <h1 class="display-5 fw-bold  text-light">Pack the whole toybox</h1>
         <p class="col-md-8 fs-4 text-light ">Unwind and stretch out in a vacation home</p>
@@ -138,7 +138,7 @@
           <h3 class="text-light">Your recent searches</h3>
         <div class="d-flex p-3 bg-light col-md-4">
           <div class="flex-shrink-0">
-            <img src="./assets/img/633390.jpg" alt="...">
+            <img src="./assets/img/tiruvannamalai.jpg" alt="...">
           </div>
           <div class="flex-grow-1 ms-3">
             <h5 class="card-title">Tiruvannamalai</h5>
@@ -163,7 +163,7 @@
                 </div>
               </div>
               <div class="col-md-4">
-                <img src="./assets/img/brussels.png" class="img-fluid rounded-start" alt="...">
+                <img src="./assets/img/flight.png" class="img-fluid rounded-start" alt="...">
               </div>
             </div>
           </div>
@@ -180,7 +180,7 @@
                 </div>
               </div>
               <div class="col-md-4">
-                <img src="./assets/img/flight.png" class="img-fluid rounded-start" alt="...">
+                <img src="./assets/img/garden.png" class="img-fluid rounded-start" alt="...">
               </div>
             </div>
           </div>
